[package]
name = "rs-git"
version = "0.1.0"
authors = ["Jansen Junior <jsd.alcantara@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name="rs-bin"
path="src/bin/main.rs"

[lib]
name="rs"
path="src/lib/lib.rs"

[dependencies]
